--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "airtable": "^0.11.3",
+    "axios": "^0.27.2",
     "lodash": "^4.17.21",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.0.0",
     "@heroicons/vue": "^1.0.1",
-    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/forms": "^0.5.1",
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.7",
     "date-fns": "^2.21.1",
