--- a/site-new/package.json
+++ b/site-new/package.json
@@ -9,6 +9,8 @@
     "seed": "node prisma/seed.js"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "^13.1.1",
