--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.2",
     "date-fns": "^2.29.3",
+    "drizzle-kit": "^0.20.14",
     "eslint": "8.7.0",
     "eslint-config-next": "^13.1.1",
     "lodash": "^4.17.21",
@@ -24,9 +25,12 @@
     "tailwindcss": "^3.0.15"
   },
   "dependencies": {
+    "@libsql/client": "^0.5.6",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^4.8.0",
     "axios": "^1.3.2",
     "clsx": "^1.2.1",
+    "drizzle-orm": "^0.30.2",
     "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
