--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "seed": "node prisma/seed.js",
-    "export-data": "curl https://doodle.mcbrid.es/api/export-data -o ./prisma/data.json",
-    "connect-db": "pscale connect mcdoodle main --port 3309"
+    "lint": "next lint"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.7",
@@ -21,13 +18,11 @@
     "eslint-config-next": "^13.1.1",
     "lodash": "^4.17.21",
     "postcss": "^8.4.5",
-    "prisma": "^4.8.0",
     "tailwindcss": "^3.0.15"
   },
   "dependencies": {
     "@libsql/client": "^0.5.6",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^4.8.0",
     "axios": "^1.3.2",
     "clsx": "^1.2.1",
     "drizzle-orm": "^0.30.2",
