--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "nextjs-starter",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate:sqlite",
+    "db:migrate": "ts-node ./db/migrate.js"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.7",
@@ -18,7 +21,8 @@
     "eslint-config-next": "^13.1.1",
     "lodash": "^4.17.21",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@libsql/client": "^0.5.6",
