--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@libsql/client": "^0.5.6",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@react-email/components": "^0.0.16",
     "axios": "^1.3.2",
     "clsx": "^1.2.1",
     "drizzle-orm": "^0.30.2",
