--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"drizzle-orm": "^0.43.1",
+		"hono": "^4.10.7",
 		"lodash": "^4.17.21",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
