--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "wrangler dev",
 		"dev:vite": "vite",
+		"dev:emails": "email dev",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "pnpm run build && vite preview",
@@ -19,7 +20,7 @@
 		"@heroicons/react": "^2.2.0",
 		"@noble/hashes": "^2.0.1",
 		"@paralleldrive/cuid2": "^2.2.2",
-		"@react-email/components": "^0.0.38",
+		"@react-email/components": "^1.0.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/vite": "^4.1.5",
 		"@tanstack/react-query": "^5.75.5",
@@ -33,6 +34,7 @@
 		"lodash": "^4.17.21",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-email": "^5.0.6",
 		"resend": "^4.5.1",
 		"tailwindcss": "^4.1.5",
 		"zod": "^3.24.4"
@@ -41,6 +43,7 @@
 		"@cloudflare/vite-plugin": "^1.1.0",
 		"@cloudflare/workers-types": "^4.20250506.0",
 		"@eslint/js": "^9.22.0",
+		"@react-email/preview-server": "5.0.6",
 		"@tanstack/router-plugin": "^1.120.1",
 		"@types/lodash": "^4.17.17",
 		"@types/node": "^22.15.18",
